@@ -1685,6 +1685,22 @@ exports.isStaticFile = function(url) {
 	return index !== -1;
 };
 
+exports.parseUA = function(headers, structured) {
+	let ua = headers['sec-ch-ua'];
+	if (ua) {
+		let platform = headers['sec-ch-ua-platform'] || '';
+		let mobile = headers['sec-ch-ua-mobile'] === '?1';
+		let index = ua.indexOf('";v');
+		let browser = ua.substring(1, index);
+		if (platform)
+			platform = platform.substring(1, platform.length - 1);
+		return structured ? { os: platform, browser: browser, device: mobile ? 'mobile' : 'desktop' } : ((platform ? (platform + ' ') : '') + browser + (mobile ? ' Mobile' : ''));
+	} else {
+		ua = (headers['user-agent'] || '');
+		return ua ? ua.parseUA(structured) : ua;
+	}
+};
+
 exports.parseInt = function(obj, def) {
 	if (obj == null || obj === '')
 		return def === undefined ? 0 : def;
